--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -9,7 +9,12 @@ LABEL intermediateStageToBeDeleted=true
 
 RUN mkdir -p /build
 WORKDIR /build/
-COPY . .
+
+# Just copying the necessary files to build the binary
+COPY client/ ./client/
+COPY vendor/ ./vendor/
+COPY go.mod go.mod ./
+
 # CGO_ENABLED must be disabled to run go binary in Alpine
 RUN CGO_ENABLED=0 GOOS=linux go build -mod vendor -o bin/client github.com/7574-sistemas-distribuidos/docker-compose-init/client
 
