Feat: Results implementation for client and server

--- a/docker-compose-dev.yaml
+++ b/docker-compose-dev.yaml
@@ -6,6 +6,7 @@ services:
     entrypoint: python3 /main.py
     environment:
       - PYTHONUNBUFFERED=1
+      - NUMBER_AGENCIES=1
     networks:
       - testing_net
     volumes:
